--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,6 +1,5 @@
-<section style="display: flex; justify-content: center;">
-    <div>
-        <h3>ატვირთეთ ფოტო</h3>
+<section>
+        <h5>ატვირთეთ ფოტო</h5>
         <div class="d-flex align-items-center justify-content-center flex-column container">
             <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path opacity="0.4" d="M36.233 15.7333H3.33301V10.7C3.33301 6.63333 6.63301 3.33333 10.6997 3.33333H14.583C17.2997 3.33333 18.1497 4.21667 19.233 5.66667L21.5663 8.76667C22.083 9.45 22.1497 9.55 23.1163 9.55H27.7663C31.7163 9.53333 35.083 12.1333 36.233 15.7333Z" fill="#5D37F3"/>
@@ -8,5 +7,4 @@
                 </svg>                
             <label for="image">ჩააგდეთ ფაილი აქ ან <span>აირჩიეთ ფაილი</span></label>          <input type="file" id="image" hidden>
         </div>
-    </div>
 </section>
