--- a/src/app/file-upload/file-upload.component.scss
+++ b/src/app/file-upload/file-upload.component.scss
@@ -5,7 +5,7 @@ span {
 
 .container {
     margin-top: 8px;
-    width: 600px;
+    width: 100%;
     height: 180px;
     border-radius: 12px;
     border: 1px dashed var(--input-text-color);
