3 kinds of input
dynamic input fields for: Author, Title, E-mail.
linked on label variable

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,5 @@
 <section class="container">
     <h2 style="margin-bottom: 40px;">ბლოგის დამატება</h2>
-    <app-file-upload></app-file-upload>
+    <!-- <app-file-upload></app-file-upload> -->
+    <app-input label="author" [styles]="{'margin-top.px': 24}"></app-input>
 </section>
