--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -1,9 +1,10 @@
 @font-face {
     font-family: FiraGo;
-    src: url(./FiraGO-Medium.ttf);
+    src: url(./FiraGO-Regular.ttf);
+    font-weight: 400;
 }
 @font-face {
     font-family: FiraGo;
     src: url(./FiraGO-Bold.ttf);
-    font-weight: bold;
+    font-weight: 500;
 }
