--- a/src/styles.scss
+++ b/src/styles.scss
@@ -156,6 +156,9 @@ p{
 	--btn-text: #FFFFFF;
 	--text-color: #1A1A1F;
 	--input-text-color: #85858D;
+	--input-bg: #FCFCFD;
+	--input-border-color: #E4E3EB;
+	--li-color: #85858D; 
 }
 
 .btn {
