--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,4 +1,8 @@
-.container{
+.wrapper{
+    width: 100%;
+    background: var(--admin-body-bg);
+    padding-top: 40px;
+}
+.my-container{
     width: 600px;
-    
 }
