--- a/src/app/form/input/input.component.scss
+++ b/src/app/form/input/input.component.scss
@@ -1,19 +1,42 @@
-input {
+input, textarea {
     width: 288px;
     height: 44px;
-    margin-top: 8px;
+    margin: 8px 0;
     padding: 12px 16px;
     border: 1px solid var(--input-border-color);
     border-radius: 12px;
     background: var(--input-bg);
 }
-ul li{
-    margin-top: 8px;
+
+ul li {
     color: var(--li-color);
     list-style: inside;
     font-size: 12px;
-    line-height: 20px; /* 166.667% */
+    line-height: 20px;
+    /* 166.667% */
 }
-.no-list-style li{
+
+.no-list-style li {
     list-style: none;
+}
+
+textarea {
+    width: 100%;
+    height: 124px;
+}
+
+input[type="date"]{
+    position: relative;
+    padding-left: 48px;
+    background-image: url('../../../assets/Icons/calendar.svg');
+    background-repeat: no-repeat;
+    background-position: left 16px center;
+}
+input[type="date"]::-webkit-calendar-picker-indicator{
+    width: 210px;
+    height: 20px;
+    position: absolute;
+    left: 16px;
+    opacity: 0;
+    content: url('../../../assets/Icons/calendar.svg');
 }
